# timelog-vibed

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  dev.sh  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  timelog_functions.sh
conf/: create-table.sql  init-timezone.sql
frontend/: Dockerfile  Dockerfile.demo  nginx.demo.conf  package-lock.json  package.json  playwright.config.ts  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: SettingsButton.svelte  TimerWidget.svelte  api.ts  settings.svelte.ts
frontend/src/lib/demo/: api.ts  csvImport.ts  db.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/charts/: +page.svelte
frontend/src/routes/entries/: +page.svelte
frontend/src/routes/log/: +page.svelte
frontend/src/routes/settings/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/settings/ai-sync/: +page.svelte
frontend/src/routes/settings/appearance/: +page.svelte
frontend/src/routes/settings/general/: +page.svelte
frontend/src/routes/settings/storage/: +page.svelte
frontend/src/routes/settings/timer/: +page.svelte
frontend/src/routes/sync/: +page.svelte
frontend/tests/e2e/: entries-mobile.spec.ts  global-setup.ts  mobile-sweep.spec.ts
timelog/: api.py  claude_service.py  db.py  service.py
timelog/cli/: __init__.py  claude_.py  export.py  import_.py  show.py  summary.py  update.py
